methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:5: error: type mismatch;
 found   : Unit
 required: Int
    for (i<-1 to nbPas) {
          ^MethodsArgs:9: error: type mismatch;
 found   : Unit
 required: Int
     for (i<-1 to nbPas) {
           ^