methods.args.MethodsArgs.scala.code
def move(nbPas:Int, versLavant: Boolean): Int = {
  var x: Int = 0
  if (versLavant==true) {
    for (i<-1 to nbPas) {
      avance(nbPas)
    } 
  }else {
     for (i<-1 to nbPas) {
      recule(nbPas)
    }
  }
}